# generate_exam_cli

./: .gitignore  MAKEFILE  main.py  model_config.py  pyproject.toml  vectore_store.py
src/gen_exam/: Generated_Exam.txt  model.py  print_exam.py
